tests/baselines/reference/parserForInStatement7.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserForInStatement7.ts (3 errors) ====
    for (var a: number = 1, b: string = "" in X) {
                                              ~
!!! error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
             ~
!!! error TS2404: The left-hand side of a 'for...in' statement cannot use a type annotation.
                                              ~
!!! error TS2304: Cannot find name 'X'.
    }